# pythia_gata

./: Cargo.toml  README.md
.github/workflows/: automerge.yml  rust.yml
src/: main.rs  main_tests.rs
