[package]
name = "pythia_gata"
version = "0.1.0"
authors = ["Yishen Miao <mys721tx@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/YukariExpress/pythia_gata"

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
telegram_types = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
env_logger = "0.6.1"
reqwest = "0.9.18"
log = "0.4.6"
futures="0.1.27"
ureq = { version = "*", features = ["json"] }
