[package]
name = "pythia_gata"
version = "0.1.0"
authors = ["Yishen Miao <mys721tx@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
homepage = "https://github.com/YukariExpress/pythia_gata"

[dependencies]
teloxide = { version = "0.17", features = ["full"] }
rand = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
log = "0.4"
axum = "0.8"
